# ai-labour-calc

./: README.md  pyproject.toml
ai_labour_calc/: __init__.py  app.py  assumptions.py  calculator.py  models.py  report.py
ai_labour_calc/static/: style.css
ai_labour_calc/templates/: index.html  report_pdf.html  results.html
tests/: __init__.py  test_calculator.py  test_report.py
