[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai_labour_calc"
version = "0.1.0"
description = "AI Labour Impact Calculator — model projected AI-driven workforce changes across three automation timelines"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AI Labour Calc Contributors" }
]
keywords = ["ai", "labour", "automation", "workforce", "calculator", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "flask>=3.0",
    "pandas>=2.0",
    "weasyprint>=60.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ai-labour-calc = "ai_labour_calc.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_labour_calc*"]

[tool.setuptools.package-data]
"ai_labour_calc" = [
    "templates/*.html",
    "static/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ai_labour_calc"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
